# tencentcloud-sdk-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SERVICE_CHANGELOG.md  VERSION  build.ps1  build.sh  build32.ps1  function_test.sh  products.md
aa/: CMakeLists.txt
aa/src/v20200224/: AaClient.cpp
aa/src/v20200224/model/: AccountInfo.cpp  CrowdAntiRushInfo.cpp  InputActivityAntiRushAdvanced.cpp  InputDetails.cpp  InputManageMarketingRisk.cpp  ManageMarketingRiskRequest.cpp  ManageMarketingRiskResponse.cpp  OnlineScamInfo.cpp  OtherAccountInfo.cpp  OutputActivityAntiRushAdvanced.cpp  OutputActivityAntiRushAdvancedValue.cpp  OutputManageMarketingRisk.cpp  OutputManageMarketingRiskValue.cpp  QQAccountInfo.cpp  QueryActivityAntiRushAdvancedRequest.cpp  QueryActivityAntiRushAdvancedResponse.cpp  QueryActivityAntiRushRequest.cpp  QueryActivityAntiRushResponse.cpp  SponsorInfo.cpp  WeChatAccountInfo.cpp
aai/: CMakeLists.txt
aai/src/v20180522/: AaiClient.cpp
aai/src/v20180522/model/: ChatRequest.cpp  ChatResponse.cpp  SentenceRecognitionRequest.cpp  SentenceRecognitionResponse.cpp  SimultaneousInterpretingRequest.cpp  SimultaneousInterpretingResponse.cpp  TextToVoiceRequest.cpp  TextToVoiceResponse.cpp
aca/: CMakeLists.txt
aca/src/v20210323/: AcaClient.cpp
aca/src/v20210323/model/: Abnormals.cpp  CommonHeader.cpp  CriticalInfo.cpp  CurrentDiagnosis.cpp  Department.cpp  DiagnosisInfo.cpp  Dict.cpp  DifferDiagnosis.cpp  DocInfo.cpp  DoctorInfo.cpp  Drug.cpp  DrugList.cpp  DrugUsage.cpp  DurgPropertyInfo.cpp  EmrDiagnosises.cpp  EmrQuality.cpp  GetDrugIndicationsReqData.cpp  GetDrugIndicationsRequest.cpp  GetDrugIndicationsResp.cpp  GetDrugIndicationsResponse.cpp  HealthPrescriptions.cpp  IndicationsDrug.cpp  LoginData.cpp  LoginDataResp.cpp  LoginHeader.cpp  LoginHisToolRequest.cpp  LoginHisToolResponse.cpp  LoginOutData.cpp  LoginOutHeader.cpp  LoginOutHisToolRequest.cpp  LoginOutHisToolResponse.cpp  LoginOutResponseData.cpp  OperateResp.cpp  PatientBaseInfo.cpp  PatientFamilyHistory.cpp  PatientHistory.cpp  PhysicalExam.cpp  RationalDrugInfo.cpp  RecommendedUsage.cpp  RecordQuality.cpp  (+24 more)
acp/: CMakeLists.txt
acp/src/v20220105/: AcpClient.cpp
acp/src/v20220105/model/: AppInfoItem.cpp  AppTaskData.cpp  CreateAppScanTaskRepeatRequest.cpp  CreateAppScanTaskRepeatResponse.cpp  CreateAppScanTaskRequest.cpp  CreateAppScanTaskResponse.cpp  DescribeChannelTaskReportUrlRequest.cpp  DescribeChannelTaskReportUrlResponse.cpp  DescribeFileTicketRequest.cpp  DescribeFileTicketResponse.cpp  DescribeResourceUsageInfoRequest.cpp  DescribeResourceUsageInfoResponse.cpp  DescribeScanTaskListRequest.cpp  DescribeScanTaskListResponse.cpp  DescribeScanTaskReportUrlRequest.cpp  DescribeScanTaskReportUrlResponse.cpp  DescribeScanTaskStatusRequest.cpp  DescribeScanTaskStatusResponse.cpp  ResourceUsageInfoData.cpp  TaskFlowStepsInfo.cpp
adp/: CMakeLists.txt
adp/src/v20260520/: AdpClient.cpp
adp/src/v20260520/model/: AICallConfig.cpp  AIOptimizeModel.cpp  AccountInfo.cpp  AgentAdvancedConfig.cpp  AgentCollaborationConfig.cpp  AgentDetail.cpp  AgentInput.cpp  AgentModelConfig.cpp  AgentPlugin.cpp  AgentPluginConfig.cpp  AgentPluginParameter.cpp  AgentProfile.cpp  AgentRelease.cpp  AgentReleasePreview.cpp  AgentSkill.cpp  AgentSkillConfig.cpp  AgentSpec.cpp  AgentSummary.cpp  AgentSystemVariable.cpp  AgentTool.cpp  AgentToolBasicConfig.cpp  AgentToolConfig.cpp  AgentToolInputParameter.cpp  AgentToolOutputParameter.cpp  AgentUserInputValue.cpp  ApiKeyAuthConfig.cpp  ApiPluginConfig.cpp  ApiToolConfig.cpp  App.cpp  AppAdvancedConf.cpp  AppAppeal.cpp  AppAuxiliaryInfo.cpp  AppConfig.cpp  AppExperienceConfig.cpp  AppGreetingConfig.cpp  AppMemoryConfig.cpp  AppMetadata.cpp  AppModeConfig.cpp  AppModelConfig.cpp  AppOperation.cpp  (+225 more)
advisor/: CMakeLists.txt
advisor/src/v20200721/: AdvisorClient.cpp
advisor/src/v20200721/model/: Conditions.cpp  CreateAdvisorAuthorizationRequest.cpp  CreateAdvisorAuthorizationResponse.cpp  DescribeStrategie.cpp  DescribeStrategiesCondition.cpp  DescribeStrategiesRequest.cpp  DescribeStrategiesResponse.cpp  DescribeTaskStrategyRisksRequest.cpp  DescribeTaskStrategyRisksResponse.cpp  KeyValue.cpp  RiskFieldsDesc.cpp  Strategies.cpp
af/: CMakeLists.txt
af/src/v20200226/: AfClient.cpp
af/src/v20200226/model/: AntiFraudCryptoFilter.cpp  AntiFraudFilter.cpp  AntiFraudRecord.cpp  DescribeAntiFraudRequest.cpp  DescribeAntiFraudResponse.cpp  FinanceAntiFraudCryptoFilter.cpp  FinanceAntiFraudFilter.cpp  FinanceAntiFraudRecord.cpp  FinanceOtherModelScores.cpp  GetAntiFraudRequest.cpp  GetAntiFraudResponse.cpp  RiskDetail.cpp  (+5 more)
afc/: CMakeLists.txt
afc/src/v20200226/: AfcClient.cpp
ags/: CMakeLists.txt
ags/src/v20250920/: AgsClient.cpp
ai3d/: CMakeLists.txt
ai3d/src/v20250513/: Ai3dClient.cpp
aiart/: CMakeLists.txt
aiart/src/v20221229/: AiartClient.cpp
alb/: CMakeLists.txt
alb/src/v20251030/: AlbClient.cpp
ame/: CMakeLists.txt
ame/src/v20190916/: AmeClient.cpp
ams/: CMakeLists.txt
ams/src/v20200608/: AmsClient.cpp
ams/src/v20201229/: AmsClient.cpp
anicloud/: CMakeLists.txt
anicloud/src/v20220923/: AnicloudClient.cpp
antiddos/: CMakeLists.txt
antiddos/src/v20200309/: AntiddosClient.cpp
antiddos/src/v20250903/: AntiddosClient.cpp
apcas/: CMakeLists.txt
apcas/src/v20201127/: ApcasClient.cpp
ape/: CMakeLists.txt
ape/src/v20200513/: ApeClient.cpp
api/: CMakeLists.txt
api/src/v20201106/: ApiClient.cpp
apigateway/: CMakeLists.txt
apigateway/src/v20180808/: ApigatewayClient.cpp
apis/: CMakeLists.txt
apis/src/v20240801/: ApisClient.cpp
apm/: CMakeLists.txt
apm/src/v20210622/: ApmClient.cpp
as/: CMakeLists.txt
as/src/v20180419/: AsClient.cpp
asr/: CMakeLists.txt
asr/src/v20190614/: AsrClient.cpp
asw/: CMakeLists.txt
asw/src/v20200722/: AswClient.cpp
ba/: CMakeLists.txt
ba/src/v20200720/: BaClient.cpp
batch/: CMakeLists.txt
batch/src/v20170312/: BatchClient.cpp
bda/: CMakeLists.txt
bda/src/v20200324/: BdaClient.cpp
bh/: CMakeLists.txt
bh/src/v20230418/: BhClient.cpp
(+97654 files in other folders)
