#
# Copyright (c) 2017-2019 THL A29 Limited, a Tencent company. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.15)

cmake_policy(SET CMP0048 NEW)

file(STRINGS "VERSION" version)

project(tencentcloud-sdk-cpp VERSION ${version})

message(STATUS "Project version: ${PROJECT_VERSION}")

set(TARGET_OUTPUT_NAME_PREFIX "tencentcloud-sdk-cpp-" CACHE STRING "The target's output name prefix")
option(BUILD_SHARED_LIBS  "Enable shared library" ON)
option(BUILD_FUNCTION_TESTS "Enable function test" OFF)

set(LIB_TYPE STATIC)
if(BUILD_SHARED_LIBS)
    set(LIB_TYPE SHARED)
endif()

set_property(GLOBAL
    PROPERTY
    USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# include(ExternalProject)
include(GNUInstallDirs)

# On some platforms, rapidjson cannot deduce the cpu endianness and needs to be specified manually
include (TestBigEndian)
TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
if(IS_BIG_ENDIAN)
    add_compile_definitions(RAPIDJSON_ENDIAN=RAPIDJSON_BIGENDIAN)
else()
    add_compile_definitions(RAPIDJSON_ENDIAN=RAPIDJSON_LITTLEENDIAN)
endif()

if (MSVC)
  # enable big source file
  add_compile_options(/bigobj)
  # to generate .lib file
  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
  # parallel build
  add_compile_options(/MP)
endif ()

# both core and service require curl include path
find_package(CURL REQUIRED)
include_directories(${CURL_INCLUDE_DIRS})

if(BUILD_FUNCTION_TESTS)
    enable_testing()
    add_subdirectory(test/function_test/cvm)
    add_subdirectory(test/function_test/cbs)
    add_subdirectory(test/function_test/core)
endif()

add_subdirectory(core)

if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";aai;")
    add_subdirectory(aai)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";aca;")
    add_subdirectory(aca)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";acp;")
    add_subdirectory(acp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";advisor;")
    add_subdirectory(advisor)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";af;")
    add_subdirectory(af)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";afc;")
    add_subdirectory(afc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";aiart;")
    add_subdirectory(aiart)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ame;")
    add_subdirectory(ame)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ams;")
    add_subdirectory(ams)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";anicloud;")
    add_subdirectory(anicloud)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";antiddos;")
    add_subdirectory(antiddos)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ape;")
    add_subdirectory(ape)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";api;")
    add_subdirectory(api)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";apigateway;")
    add_subdirectory(apigateway)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";apm;")
    add_subdirectory(apm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";as;")
    add_subdirectory(as)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";asr;")
    add_subdirectory(asr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";asw;")
    add_subdirectory(asw)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ba;")
    add_subdirectory(ba)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";batch;")
    add_subdirectory(batch)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bda;")
    add_subdirectory(bda)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bh;")
    add_subdirectory(bh)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bi;")
    add_subdirectory(bi)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";billing;")
    add_subdirectory(billing)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bizlive;")
    add_subdirectory(bizlive)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bm;")
    add_subdirectory(bm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bma;")
    add_subdirectory(bma)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bmeip;")
    add_subdirectory(bmeip)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bmlb;")
    add_subdirectory(bmlb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bmvpc;")
    add_subdirectory(bmvpc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bpaas;")
    add_subdirectory(bpaas)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bri;")
    add_subdirectory(bri)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";bsca;")
    add_subdirectory(bsca)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";btoe;")
    add_subdirectory(btoe)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ca;")
    add_subdirectory(ca)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cam;")
    add_subdirectory(cam)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";captcha;")
    add_subdirectory(captcha)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";car;")
    add_subdirectory(car)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cat;")
    add_subdirectory(cat)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cbs;")
    add_subdirectory(cbs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ccc;")
    add_subdirectory(ccc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdb;")
    add_subdirectory(cdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdc;")
    add_subdirectory(cdc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdn;")
    add_subdirectory(cdn)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cds;")
    add_subdirectory(cds)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdwch;")
    add_subdirectory(cdwch)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdwdoris;")
    add_subdirectory(cdwdoris)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdwpg;")
    add_subdirectory(cdwpg)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdz;")
    add_subdirectory(cdz)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cfg;")
    add_subdirectory(cfg)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cfs;")
    add_subdirectory(cfs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cfw;")
    add_subdirectory(cfw)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";chc;")
    add_subdirectory(chc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";chdfs;")
    add_subdirectory(chdfs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ciam;")
    add_subdirectory(ciam)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cii;")
    add_subdirectory(cii)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cim;")
    add_subdirectory(cim)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cis;")
    add_subdirectory(cis)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ckafka;")
    add_subdirectory(ckafka)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";clb;")
    add_subdirectory(clb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cloudapp;")
    add_subdirectory(cloudapp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cloudaudit;")
    add_subdirectory(cloudaudit)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cloudhsm;")
    add_subdirectory(cloudhsm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cloudstudio;")
    add_subdirectory(cloudstudio)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cls;")
    add_subdirectory(cls)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cme;")
    add_subdirectory(cme)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cmq;")
    add_subdirectory(cmq)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cms;")
    add_subdirectory(cms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";config;")
    add_subdirectory(config)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";controlcenter;")
    add_subdirectory(controlcenter)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cpdp;")
    add_subdirectory(cpdp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";csip;")
    add_subdirectory(csip)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";csxg;")
    add_subdirectory(csxg)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cvm;")
    add_subdirectory(cvm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cwp;")
    add_subdirectory(cwp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cws;")
    add_subdirectory(cws)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cynosdb;")
    add_subdirectory(cynosdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dasb;")
    add_subdirectory(dasb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dataintegration;")
    add_subdirectory(dataintegration)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dayu;")
    add_subdirectory(dayu)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dbbrain;")
    add_subdirectory(dbbrain)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dbdc;")
    add_subdirectory(dbdc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dc;")
    add_subdirectory(dc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dcdb;")
    add_subdirectory(dcdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dlc;")
    add_subdirectory(dlc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dnspod;")
    add_subdirectory(dnspod)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";domain;")
    add_subdirectory(domain)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";drm;")
    add_subdirectory(drm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ds;")
    add_subdirectory(ds)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dsgc;")
    add_subdirectory(dsgc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dtf;")
    add_subdirectory(dtf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dts;")
    add_subdirectory(dts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";eb;")
    add_subdirectory(eb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ecc;")
    add_subdirectory(ecc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ecdn;")
    add_subdirectory(ecdn)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ecm;")
    add_subdirectory(ecm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";eiam;")
    add_subdirectory(eiam)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";eis;")
    add_subdirectory(eis)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";emr;")
    add_subdirectory(emr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";es;")
    add_subdirectory(es)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ess;")
    add_subdirectory(ess)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";essbasic;")
    add_subdirectory(essbasic)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";facefusion;")
    add_subdirectory(facefusion)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";faceid;")
    add_subdirectory(faceid)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";fmu;")
    add_subdirectory(fmu)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ft;")
    add_subdirectory(ft)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gaap;")
    add_subdirectory(gaap)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gme;")
    add_subdirectory(gme)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";goosefs;")
    add_subdirectory(goosefs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gpm;")
    add_subdirectory(gpm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gs;")
    add_subdirectory(gs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gse;")
    add_subdirectory(gse)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gwlb;")
    add_subdirectory(gwlb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";habo;")
    add_subdirectory(habo)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";hai;")
    add_subdirectory(hai)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";hasim;")
    add_subdirectory(hasim)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";hcm;")
    add_subdirectory(hcm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";hunyuan;")
    add_subdirectory(hunyuan)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iai;")
    add_subdirectory(iai)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iap;")
    add_subdirectory(iap)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ic;")
    add_subdirectory(ic)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";icr;")
    add_subdirectory(icr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ie;")
    add_subdirectory(ie)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iecp;")
    add_subdirectory(iecp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ig;")
    add_subdirectory(ig)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iir;")
    add_subdirectory(iir)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ims;")
    add_subdirectory(ims)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ioa;")
    add_subdirectory(ioa)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iot;")
    add_subdirectory(iot)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iotcloud;")
    add_subdirectory(iotcloud)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iotexplorer;")
    add_subdirectory(iotexplorer)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iottid;")
    add_subdirectory(iottid)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iotvideo;")
    add_subdirectory(iotvideo)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iotvideoindustry;")
    add_subdirectory(iotvideoindustry)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";irp;")
    add_subdirectory(irp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iss;")
    add_subdirectory(iss)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ivld;")
    add_subdirectory(ivld)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";keewidb;")
    add_subdirectory(keewidb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";kms;")
    add_subdirectory(kms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lcic;")
    add_subdirectory(lcic)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lighthouse;")
    add_subdirectory(lighthouse)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";live;")
    add_subdirectory(live)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lke;")
    add_subdirectory(lke)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lkeap;")
    add_subdirectory(lkeap)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lowcode;")
    add_subdirectory(lowcode)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mall;")
    add_subdirectory(mall)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mariadb;")
    add_subdirectory(mariadb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";market;")
    add_subdirectory(market)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";memcached;")
    add_subdirectory(memcached)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mgobe;")
    add_subdirectory(mgobe)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mmps;")
    add_subdirectory(mmps)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mna;")
    add_subdirectory(mna)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mongodb;")
    add_subdirectory(mongodb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";monitor;")
    add_subdirectory(monitor)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mps;")
    add_subdirectory(mps)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mqtt;")
    add_subdirectory(mqtt)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mrs;")
    add_subdirectory(mrs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ms;")
    add_subdirectory(ms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";msp;")
    add_subdirectory(msp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mvj;")
    add_subdirectory(mvj)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";nlp;")
    add_subdirectory(nlp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";npp;")
    add_subdirectory(npp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";oceanus;")
    add_subdirectory(oceanus)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ocr;")
    add_subdirectory(ocr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";omics;")
    add_subdirectory(omics)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";organization;")
    add_subdirectory(organization)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";partners;")
    add_subdirectory(partners)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";pds;")
    add_subdirectory(pds)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";postgres;")
    add_subdirectory(postgres)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";privatedns;")
    add_subdirectory(privatedns)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";pts;")
    add_subdirectory(pts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";rce;")
    add_subdirectory(rce)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";redis;")
    add_subdirectory(redis)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";region;")
    add_subdirectory(region)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";rum;")
    add_subdirectory(rum)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";scf;")
    add_subdirectory(scf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ses;")
    add_subdirectory(ses)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";smh;")
    add_subdirectory(smh)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";smop;")
    add_subdirectory(smop)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";smpn;")
    add_subdirectory(smpn)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sms;")
    add_subdirectory(sms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";soe;")
    add_subdirectory(soe)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";solar;")
    add_subdirectory(solar)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sqlserver;")
    add_subdirectory(sqlserver)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ssa;")
    add_subdirectory(ssa)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ssl;")
    add_subdirectory(ssl)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sslpod;")
    add_subdirectory(sslpod)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ssm;")
    add_subdirectory(ssm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sts;")
    add_subdirectory(sts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";svp;")
    add_subdirectory(svp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";taf;")
    add_subdirectory(taf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tag;")
    add_subdirectory(tag)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tan;")
    add_subdirectory(tan)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tat;")
    add_subdirectory(tat)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tav;")
    add_subdirectory(tav)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tbaas;")
    add_subdirectory(tbaas)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tbm;")
    add_subdirectory(tbm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tbp;")
    add_subdirectory(tbp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcaplusdb;")
    add_subdirectory(tcaplusdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcb;")
    add_subdirectory(tcb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcbr;")
    add_subdirectory(tcbr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tccatalog;")
    add_subdirectory(tccatalog)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcex;")
    add_subdirectory(tcex)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tchd;")
    add_subdirectory(tchd)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tci;")
    add_subdirectory(tci)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcm;")
    add_subdirectory(tcm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcr;")
    add_subdirectory(tcr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcss;")
    add_subdirectory(tcss)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tdcpg;")
    add_subdirectory(tdcpg)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tdid;")
    add_subdirectory(tdid)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tdmq;")
    add_subdirectory(tdmq)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tds;")
    add_subdirectory(tds)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tem;")
    add_subdirectory(tem)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";teo;")
    add_subdirectory(teo)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";thpc;")
    add_subdirectory(thpc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tia;")
    add_subdirectory(tia)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tic;")
    add_subdirectory(tic)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ticm;")
    add_subdirectory(ticm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tics;")
    add_subdirectory(tics)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tiems;")
    add_subdirectory(tiems)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tiia;")
    add_subdirectory(tiia)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tione;")
    add_subdirectory(tione)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tiw;")
    add_subdirectory(tiw)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tke;")
    add_subdirectory(tke)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tkgdq;")
    add_subdirectory(tkgdq)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tms;")
    add_subdirectory(tms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tmt;")
    add_subdirectory(tmt)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tourism;")
    add_subdirectory(tourism)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trabbit;")
    add_subdirectory(trabbit)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trdp;")
    add_subdirectory(trdp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trocket;")
    add_subdirectory(trocket)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trp;")
    add_subdirectory(trp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trro;")
    add_subdirectory(trro)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trtc;")
    add_subdirectory(trtc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tse;")
    add_subdirectory(tse)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tsf;")
    add_subdirectory(tsf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tsi;")
    add_subdirectory(tsi)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tsw;")
    add_subdirectory(tsw)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tts;")
    add_subdirectory(tts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ump;")
    add_subdirectory(ump)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vcg;")
    add_subdirectory(vcg)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vclm;")
    add_subdirectory(vclm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vcube;")
    add_subdirectory(vcube)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vdb;")
    add_subdirectory(vdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vm;")
    add_subdirectory(vm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vms;")
    add_subdirectory(vms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vod;")
    add_subdirectory(vod)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vpc;")
    add_subdirectory(vpc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vrs;")
    add_subdirectory(vrs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vtc;")
    add_subdirectory(vtc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";waf;")
    add_subdirectory(waf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";wav;")
    add_subdirectory(wav)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";wedata;")
    add_subdirectory(wedata)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";weilingwith;")
    add_subdirectory(weilingwith)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";wss;")
    add_subdirectory(wss)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";yinsuda;")
    add_subdirectory(yinsuda)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";youmall;")
    add_subdirectory(youmall)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";yunjing;")
    add_subdirectory(yunjing)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";yunsou;")
    add_subdirectory(yunsou)
endif()
